--- a/package.json
+++ b/package.json
@@ -2,21 +2,41 @@
   "name": "ts-react-tailwind-library-starter",
   "private": true,
   "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.umd.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js"
+    },
+    "./dist/style.css": "./dist/style.css"
   },
-  "dependencies": {
+  "sideEffects": false,
+  "scripts": {
+    "build": "tsc --project tsconfig.check.json && vite build && tsc --project tsconfig.build.json",
+    "typecheck": "tsc --project tsconfig.check.json",
+    "dev:site": "vite --config vite.config.site.ts",
+    "preview:site": "vite preview",
+    "build:site": "tsc && vite --config vite.config.site.ts build"
+  },
+  "dependencies": {},
+  "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
