--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "typecheck": "tsc --project tsconfig.check.json",
     "dev:site": "vite --config vite.config.site.ts",
     "preview:site": "vite preview",
-    "build:site": "tsc && vite --config vite.config.site.ts build"
+    "build:site": "tsc && vite --config vite.config.site.ts build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {},
   "peerDependencies": {
@@ -29,14 +31,22 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.8",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "^0.0.9",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.4",
+    "babel-loader": "^8.2.3",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "storybook-builder-vite": "^0.1.21",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
