--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "files": [
     "dist"
   ],
-  "main": "dist/index.umd.js",
+  "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "require": "./dist/index.cjs.js"
     },
     "./dist/style.css": "./dist/style.css"
   },
