--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   },
   "dependencies": {},
   "peerDependencies": {
+    "@headlessui/react": "^1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@headlessui/react": "^1.5.0",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
