--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,5 +8,6 @@
     "declarationMap": true,
     "emitDeclarationOnly": true
   },
-  "include": ["src/index.ts", "src/components"]
+  "include": ["src/index.ts", "src/components"],
+  "exclude": ["src/**/*.stories.tsx"]
 }
